added shortcut link

--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
     <div class="body-content">
         <div style="display: flex; gap: 2rem; flex-direction: column; padding-top: 2rem;" id="tutorial">
           <h2 style="color: var(--darker-grey); margin: 0; padding: 0; text-align: center;">First,</h2>
-          <a href="#" class="button-hollow">Download the shortcut</a>
+          <a href="https://www.icloud.com/shortcuts/5add087d686e42ef9b31f44893dc05e0" class="button-hollow">Download the shortcut</a>
             
           <h2 style="color: var(--darker-grey); margin: 0; padding: 0; text-align: center;">Run it, and enter: </h2>
           <div id="id" style="color: var(--darker-grey); padding: 0.5rem 1rem; text-align: center; border: 2px solid var(--grey); border-radius: 0.5rem;">
