added how to action button

--- a/home.html
+++ b/home.html
@@ -57,6 +57,8 @@
             <!-- id goes here -->
           </div>
           <h2 style="color: var(--darker-grey); margin: 0; padding: 0; text-align: center;">when prompted </h2>
+          <h3 style="color: var(--darker-grey); margin: 0; padding: 0; text-align: center;">Make it run when your action button is pressed by tapping</h3>
+          <h3 style="color: var(--darker-grey); margin: 0; padding: 0; text-align: center;">Settings > Action Button > Shortcut > B2</h3>
         </div>
         <div style="display: flex; gap: 2rem; flex-direction: column;" id="todos">
             <!-- todos go here -->
